--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <link rel="stylesheet" href="main.css">
-<h1>test</h1>
+<html>
+<body style="background-color:powderblue;">
+  <h1>
+    test
+  </h1>
+</body>
+</html>
